fixed spacing and style for company modal

--- a/playgo-mobile/src/app/core/shared/campaigns/app-company-label/company-modal/company.modal.scss
+++ b/playgo-mobile/src/app/core/shared/campaigns/app-company-label/company-modal/company.modal.scss
@@ -27,9 +27,10 @@ ion-content {
     font-weight: bold;
     margin: 24px 0px 8px 0px;
     border-bottom: solid 1px grey;
+    font-size: larger;
   }
   .subsection {
-    margin: 24px 0px 8px 0px;
+    margin: 8px 0px 24px 0px;
   }
   .link {
     cursor: pointer;
